2006-09-15  Per Abrahamsen  <abraham@dina.kvl.dk>

	* boolean_extern.C: New model.
	* Makefile (MODELS): Added it.

2006-09-14  Per Abrahamsen  <abraham@dina.kvl.dk>

	* boolean_number.C: New models.
	* boolean_string.C: Split from 'boolean.C'.
	* Makefile (MODELS): Added them.

	* number_extern.C: New model.
	* Makefile (MODELS): Added.
	* scope_multi.C: New utility.
	* Makefile (OTHER): Added.

2006-09-13  Per Abrahamsen  <abraham@dina.kvl.dk>

	* all: Made a lot of dimensions symbols instead of std::strings.

2006-09-04  Per Abrahamsen  <abraham@dina.kvl.dk>

	* units.C (standard_conversions): New SoilHeat convertions.

2006-09-01  Per Abrahamsen  <abraham@dina.kvl.dk>

	* all:  Moved soil heat back to column.

	* weather.C (T_normal): Include hour.

2006-08-30  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.09 released.

2006-08-29  Per Abrahamsen  <abraham@dina.kvl.dk>

	* select_flux.C (output_array): Add warning if there are no edges.

	* geometry.C (edge_cross_z): Include top of the centers, so you
	won't get excluded if you choose the center of a node.

2006-08-28  Per Abrahamsen  <abraham@dina.kvl.dk>

	* soil_water.C (load_syntax): Changed dimension of sinks to match
	'log.dai'. 

	* soil_water.C (K): New log variable.
	* soil_water.h, soil_water.C (tick_after): New member function.
	* column_std.C (initialize): Call it.
	* lib/log.dai ("Soil Water Conductivity (log10)"): Use it.

	* select_utils.h, select_utils.C: New utility.
	* Makefile (OTHER): Added it.
	* select_interval.C: Use it.

2006-08-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/potato.dai ("Potato; FertOrgaNic"): New base parameterization.
	("Potato; Agria", "Potato; Folva", "Potato; Triada"): New
	parameterizations.
	(Potato): Changed default to Folva.

2006-08-21  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Makefile (MODELS): Removed 'select_date.C'.
	* select.C, select.h (output_time): Removed.
	* log.h(output): Removed "const Time&" argument.